<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_contact_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/txt_padding"
        android:text="@string/contact_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_frame"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/my_email" />

    <TextView
        android:id="@+id/txt_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="@dimen/txt_padding"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_gender_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/txt_padding"
        android:text="@string/male" />


    <TextView
        android:id="@+id/txt_nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="@dimen/txt_padding"
        android:text="@string/nationality"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_nationality_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/txt_padding"
        android:text="@string/egyptian" />


    <TextView
        android:id="@+id/txt_marital_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="@dimen/txt_padding"
        android:text="@string/marital_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_marital_status_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/txt_padding"
        android:text="@string/married" />



    <TextView
        android:id="@+id/txt_military_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="@dimen/txt_padding"
        android:text="@string/military_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_military_status_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/txt_padding"
        android:text="@string/completed" />

</androidx.appcompat.widget.LinearLayoutCompat>