<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".MainApp.MasterActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_quran"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/quran" />

        <Button
            android:id="@+id/btn_calculator"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/calculator" />

        <Button
            android:id="@+id/btn_myApps"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_apps" />


        <Button
            android:id="@+id/btn_We"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/we_activity" />

        <Button
            android:id="@+id/btn_MainActivity"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_activity"

            />


        <Button
            android:id="@+id/btn_animate"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/animate_activity" />

        <Button
            android:id="@+id/btn_celebrate"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_activity" />


        <Button
            android:id="@+id/btn_QRCodeActivity"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/qr_activity" />

        <Button
            android:id="@+id/btn_jobSchedulerActivity"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job_scheduler" />

        <Button
            android:id="@+id/btn_ForegroundActivity"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/foreground_service" />


        <Button
            android:id="@+id/btn_jobIntentServiceActivity"
            android:layout_width="@dimen/btn_width_mater_activity"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job_intent_service" />



    </androidx.appcompat.widget.LinearLayoutCompat>


    <include
        android:id="@+id/fab_layout"
        layout="@layout/fab_button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        />


</androidx.constraintlayout.widget.ConstraintLayout>