<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainApp.Fragments.profile.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:id="@+id/mainview"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="?actionBarSize"
                app:layoutDescription="@xml/profile_scene"
                app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
                >


                <ImageView
                    android:id="@+id/background"
                    android:layout_width="0dp"
                    android:layout_height="1000dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.618"
                    app:srcCompat="@drawable/blur_background"
                    tools:ignore="ContentDescription" />

                <View
                    android:id="@+id/anchor"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/corner_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@drawable/profile_img"
                    app:layout_anchorGravity="center"
                    app:layout_constraintBottom_toTopOf="@+id/anchor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/anchor" />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/my_name"
                    app:layout_constraintEnd_toEndOf="@+id/img_profile"
                    app:layout_constraintStart_toStartOf="@+id/img_profile"
                    app:layout_constraintTop_toBottomOf="@+id/img_profile" />

                <LinearLayout
                    android:id="@+id/contacts_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_name">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#D2D6DA" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        >

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_email"
                            android:drawableTop="@android:drawable/ic_dialog_email"
                            />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/call"
                            android:drawableTop="@android:drawable/ic_menu_call"
                            />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#D2D6DA" />

                </LinearLayout>
            </androidx.constraintlayout.motion.widget.MotionLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                >
                <TextView
                    android:id="@+id/txt_contact_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/contact_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/my_email"
                    android:gravity="center_vertical"
                    android:background="@drawable/my_frame"
                    android:drawableStart="@android:drawable/ic_dialog_email"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_contact_details"
                    />


                <TextView
                    android:id="@+id/txt_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_email" />

                <TextView
                    android:id="@+id/txt_gender_var"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_gender" />



                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/social_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_gender_var"
                    >

                    <ImageView
                        android:id="@+id/img_fb"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/fb"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/img_whatsapp"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/img_whatsapp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/img_instagram"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/img_instagram"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/img_linkedin"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/img_linkedin"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/img_github"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/img_github"
                        tools:ignore="ContentDescription" />


                </androidx.appcompat.widget.LinearLayoutCompat>






            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>


