<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txt_appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="APP NAME"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".45"
            android:orientation="horizontal"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/app_img_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            tools:listitem="@layout/card_app_image"
            android:background="@drawable/my_frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_appTitle"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/app_img_recyclerView"
        >

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_img_recyclerView"
            />


        <TextView
            android:id="@+id/app_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_1"
            android:textColor="@color/Gray"
            android:textStyle="normal"
            android:textSize="@dimen/title_size"
            android:gravity="center"
            android:padding="@dimen/txt_padding"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_corner_btn"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/description_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="10dp"
          >
            <Button
                android:id="@+id/btn_showApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_quran"
                android:textColor="@color/white"
                android:background="@drawable/rounded_corner_btn"
                android:padding="10dp"
                />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>







<!--
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card title" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum." />

            <Button
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Button" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/ic_radio" />

    </FrameLayout>
-->

</androidx.cardview.widget.CardView>